# planwise

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  python_add.md  todo
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/planwise/: agents.py  cli.py  completion.py  frontmatter.py  helpers.py  store.py  types.py
src/planwise/agents/: __init__.py  _instructions.py  base.py  capabilities.py  claude.py  cursor.py  render.py
src/planwise/agents/_templates/: instructions.md.j2
src/planwise/commands/: __init__.py  _launcher.py  claude.py  completion.py  crud.py  cursor.py  deps.py  lifecycle.py  metadata.py  pipeline.py  query.py  run.py  sync.py  verify.py
src/planwise/layouts/: __init__.py  python-web.md
src/planwise/pipeline/: __init__.py  slug.py  state.py
src/planwise/rulesets/: __init__.py  base.md  design.md  finance.md  python.md  rust-web.md  test-base.md  ts-web.md  ui-ux.md
src/planwise/sync/: __init__.py  engine.py  errors.py  pipeline.py  plugin_loader.py  state.py  types.py
src/planwise/sync/plugins/: alembic.yml  git.yml  (+1 more)
src/planwise/workflows/: __init__.py  brief.md  bug.md  implement.md  memo.md  optimize.md  plan.md  sync.md  task.md  test.md
tests/: test_agents_golden.py
tests/golden/claude/: brief.md  bug.md  implement.md  memo.md  optimize.md  plan.md  sync.md  task.md  test.md
tests/golden/cursor/: brief.md  bug.md  implement.md  memo.md  optimize.md  plan.md  sync.md  task.md  test.md
(+17 files in other folders)
